--- a/DIRadio.html
+++ b/DIRadio.html
@@ -58,7 +58,7 @@
 			<div id="none">Click on a channel to play</div>
 			<div id="np" style="display: none;">NP: DI Radio - <span id="station"></span><br />
 			<i class="icon-play"></i><a onclick="stopPlayer();"><i class="icon-stop"></i></a>
-			<!--<br><center><input type="range" min="0" max="1" onchange="air.SoundMixer.soundTransform = new air.SoundTransform(this.value, 0);"></center><br><br>a<br>--></div>
+			<!--<input type="text" class="input x-small" onchange="air.SoundMixer.soundTransform = new air.SoundTransform(this.value, 0);"></div>-->
 		</div>
 		
 		<script src="/lib/layout/js/jquery.js"></script>
