Fixed bug with saving Listen Key
This is a temporary workaround - a better fix will come soon!

--- a/config.html
+++ b/config.html
@@ -19,10 +19,8 @@
 			If you have a premium account, you can add your listen key here. You can find your listen key <a href="http://www.di.fm/member/listen_key" target="_blank">here</a>. 
 			Are you not premium yet? <a href="http://www.di.fm/member/premium/trial" target="_blank">Sign up</a> for your free trial here.<br><br>
 			
-			<input type="text" id="listenkey" onchange="listenKey(this.value)"><br><br>
-			
-			Your current Listen Key: <span id="key"></span>
-			
+			You can change your listen key <a href="listenkey.html" target="_blank">here</a>.
+				
 			<br><br>
 			
 			<span id="currVersion"></span>
