--- a/config.html
+++ b/config.html
@@ -3,15 +3,22 @@
 			<h4>Lanch at startup?</h4>
 			
 			<div class="btn-group" data-toggle="buttons-radio">
-		   	 	<button type="button" id="yes" class="btn" onclick="air.NativeApplication.nativeApplication.startAtLogin = true;">Yes</button>
-		    	<button type="button" id="no" class="btn" onclick="air.NativeApplication.nativeApplication.startAtLogin = false;">No</button>
+		   	 	<button type="button" id="yes" class="btn">Yes</button>
+		    	<button type="button" id="no" class="btn">No</button>
 		    </div><br>
 			
 			<h4>Show channel description?</h4> 
 			
 			<div class="btn-group" data-toggle="buttons-radio">
-		   	 	<button type="button" id="yes2" class="btn" onclick="air.EncryptedLocalStore.setItem('desc', strTrue);">Yes</button>
-		    	<button type="button" id="no2" class="btn" onclick="air.EncryptedLocalStore.setItem('desc', strFalse);">No</button>
+		   	 	<button type="button" id="yes2" class="btn">Yes</button>
+		    	<button type="button" id="no2" class="btn">No</button>
+		    </div><br>
+			
+			<h4>Show track notification?</h4> 
+			
+			<div class="btn-group" data-toggle="buttons-radio">
+		   	 	<button type="button" id="yes3" class="btn">Yes</button>
+		    	<button type="button" id="no3" class="btn">No</button>
 		    </div><br>
 			
 			<h4>Premium Listen Key</h4>
